ansible/roles/ingress_setup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.dc.itte.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-lab
              port:
                number: 80
